--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
+        "laravel/horizon": "^5.30",
         "laravel/tinker": "^2.9",
         "league/csv": "^9.21.0"
     },
